# mlops-example

./: .gitignore  Makefile  README.md  local.env  logit.pkl  model.py  pyproject.toml
gcp_tools/: create_bucket.py
ml_api/: dash_server.py  model.py  predict.py  request.py  request_cloud_function.py  server.py
