[tool.poetry]
name = "mlops-example"
version = "0.1.0"
description = ""
authors = ["r-matsuzaka <matsuzakaryo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
scikit-learn = "^1.0.1"
black = "^21.9b0"
isort = "^5.9.3"
pytest = "^6.2.5"
pylint = "^2.11.1"
mypy = "^0.910"
pytest-cov = "^3.0.0"
pylint-fail-under = "^0.3.0"
mlflow = "^1.21.0"
mkdocs = "^1.2.3"
gunicorn = "^20.1.0"
dash = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
